#1 Anpassungen an die Vorgaben für R Markdown Templates. Damit taucht der Report nun auch bei den Templates unter New->RMarkdown->FromTemplate auf.

--- a/inst/rmarkdown/templates/INWTlab_report/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/INWTlab_report/skeleton/skeleton.Rmd
@@ -2,6 +2,9 @@
 title: Document Title
 author: INWTlab 
 date: \today
+params:
+  logo: TRUE
+  cover: TRUE
 documentclass: article
 fontsize: 10
 papersize: a4paper
