#1 logo und cover wird über params gesetzt (dateiname)

--- a/inst/rmarkdown/templates/INWTlab_report/skeleton/defs.tex
+++ b/inst/rmarkdown/templates/INWTlab_report/skeleton/defs.tex
@@ -47,7 +47,7 @@
 		\parbox[b][\paperheight]{\paperwidth}{%
 			\vfill
 			\centering
-			\includegraphics[width=\paperwidth,height=\paperheight]{cover}%
+			\includegraphics[width=\paperwidth,height=\paperheight]{\cover}%
 			\vfill
 }}}
 
@@ -61,7 +61,7 @@
 	\makeatother
 	\lfoot{}
 	\cfoot{}
-	\rfoot{\includegraphics{logo.png}}
+	\rfoot{\includegraphics{\logo}}
 }
 
 
@@ -90,7 +90,7 @@
 \pagestyle{fancy}
 \lhead{}
 \chead{}
-\rhead{ \includegraphics{logo.png}}
+\rhead{ \includegraphics{\logo}}
 \makeatother
 \newlength{\myheight}
 \lfoot{}
