# original author + license in header

--- a/inst/rmarkdown/templates/INWTlab_report/skeleton/defs.tex
+++ b/inst/rmarkdown/templates/INWTlab_report/skeleton/defs.tex
@@ -1,3 +1,6 @@
+% Original Author: Karol KozioL
+% License: GPL-3 
+
 % % % packages -----------------------------------------------------------------------------------
 \usepackage{amsmath}
 \usepackage{array}
