--- a/inst/rmarkdown/templates/INWTlab_report/skeleton/defs.tex
+++ b/inst/rmarkdown/templates/INWTlab_report/skeleton/defs.tex
@@ -1,5 +1,6 @@
-% Original Author: Karol KozioL
-% License: GPL-3 
+% Author: Karol KozioL
+% License: GPL-3
+% Modified by: Sarah Wagner
 
 % % % packages -----------------------------------------------------------------------------------
 \usepackage{amsmath}
