#1 set colors via yaml header

--- a/inst/rmarkdown/templates/business_report/skeleton/defs.tex
+++ b/inst/rmarkdown/templates/business_report/skeleton/defs.tex
@@ -23,8 +23,8 @@
 % % % settings -----------------------------------------------------------------------------------
 
 % % custom colors
-\definecolor{color1}{HTML}{2b4894}
-\definecolor{color2}{HTML}{d4dbde}
+\definecolor{colorOne}{HTML}{\colorOne}
+\definecolor{colorTwo}{HTML}{\colorTwo}
 
 
 % % fonts 
@@ -34,9 +34,9 @@
 
 
 % % sections
-\titleformat{\section}{\color{color1}\headingfont\Large\bfseries}{\thesection}{1em}{}[\titlerule]
-\titleformat{\subsection}{\color{color1}\headingfont\large\bfseries}{\thesubsection}{1em}{}
-\titleformat{\subsubsection}{\color{color1}\headingfont\bfseries}{\thesubsubsection}{1em}{}
+\titleformat{\section}{\color{colorOne}\headingfont\Large\bfseries}{\thesection}{1em}{}[\titlerule]
+\titleformat{\subsection}{\color{colorOne}\headingfont\large\bfseries}{\thesubsection}{1em}{}
+\titleformat{\subsubsection}{\color{colorOne}\headingfont\bfseries}{\thesubsubsection}{1em}{}
 
 % % misc
 \setlength{\parindent}{0em} 
@@ -79,9 +79,9 @@
 	\vspace{14cm}
 	
 	\begin{tabular}[l]{@{}p{\textwidth}@{}}
-		\color{color1}\headingfont\LARGE\@title\\[1em]
-		\color{color1}\headingfont\large\@author\\[1em]
-		\color{color1}\headingfont\small\@date\\[1em]
+		\color{colorOne}\headingfont\LARGE\@title\\[1em]
+		\color{colorOne}\headingfont\large\@author\\[1em]
+		\color{colorOne}\headingfont\small\@date\\[1em]
 	\end{tabular}
 	
 	
