--- a/inst/rmarkdown/templates/business_report/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/business_report/skeleton/skeleton.Rmd
@@ -5,6 +5,8 @@ date: \today
 params:
   logo: logo.png
   cover: cover.png
+  colorOne: 2b4894
+  colorTwo: d4dbde
 documentclass: article
 fontsize: 10
 papersize: a4paper
@@ -15,6 +17,8 @@ output:
 header-includes: 
   - \newcommand{\logo}{`r gsub("_", "\\_", params$logo)`}
   - \newcommand{\cover}{`r gsub("_", "\\_", params$cover)`}
+  - \newcommand{\colorOne}{`r params$colorOne`}
+  - \newcommand{\colorTwo}{`r params$colorTwo`}
 ---
 
 
@@ -48,7 +52,7 @@ tab <- xtable(head(iris, n = 20), align = "|C|C|C|C|C|C|")
 addtorow <- list()
 addtorow$pos <- list()
 addtorow$pos[[1]] <- -1
-addtorow$command <- c("\\rowcolor{color2}")
+addtorow$command <- c("\\rowcolor{colorTwo}")
 
 print(tab,
       include.rownames = FALSE,
