--- a/inst/rmarkdown/templates/business_report/skeleton/defs.tex
+++ b/inst/rmarkdown/templates/business_report/skeleton/defs.tex
@@ -23,8 +23,8 @@
 % % % settings -----------------------------------------------------------------------------------
 
 % % custom colors
-\definecolor{colorOne}{HTML}{\colorOne}
-\definecolor{colorTwo}{HTML}{\colorTwo}
+\definecolor{iblue}{HTML}{\iblue}
+\definecolor{igray}{HTML}{\igray}
 
 
 % % fonts 
@@ -34,9 +34,9 @@
 
 
 % % sections
-\titleformat{\section}{\color{colorOne}\headingfont\Large\bfseries}{\thesection}{1em}{}[\titlerule]
-\titleformat{\subsection}{\color{colorOne}\headingfont\large\bfseries}{\thesubsection}{1em}{}
-\titleformat{\subsubsection}{\color{colorOne}\headingfont\bfseries}{\thesubsubsection}{1em}{}
+\titleformat{\section}{\color{iblue}\headingfont\Large\bfseries}{\thesection}{1em}{}[\titlerule]
+\titleformat{\subsection}{\color{iblue}\headingfont\large\bfseries}{\thesubsection}{1em}{}
+\titleformat{\subsubsection}{\color{iblue}\headingfont\bfseries}{\thesubsubsection}{1em}{}
 
 % % misc
 \setlength{\parindent}{0em} 
@@ -79,9 +79,9 @@
 	\vspace{14cm}
 	
 	\begin{tabular}[l]{@{}p{\textwidth}@{}}
-		\color{colorOne}\headingfont\LARGE\@title\\[1em]
-		\color{colorOne}\headingfont\large\@author\\[1em]
-		\color{colorOne}\headingfont\small\@date\\[1em]
+		\color{iblue}\headingfont\LARGE\@title\\[1em]
+		\color{iblue}\headingfont\large\@author\\[1em]
+		\color{iblue}\headingfont\small\@date\\[1em]
 	\end{tabular}
 	
 	
