--- a/inst/rmarkdown/templates/business_report/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/business_report/skeleton/skeleton.Rmd
@@ -12,8 +12,9 @@ fontsize: 10
 papersize: a4paper
 output: 
   IReports::businessReport:
-    keep_tex: true
+    keep_tex: TRUE
     latex_engine: xelatex
+    resetStyleFiles: FALSE
 header-includes: 
   - \newcommand{\logo}{`r gsub("_", "\\_", params$logo)`}
   - \newcommand{\cover}{`r gsub("_", "\\_", params$cover)`}
